# mcp-it

./: .gitignore  README.md  pyproject.toml
src/mcp_it/: __init__.py  agents.py  cli.py  command_discovery.py  types.py
